// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chord Chart should display pair count on hover on chord 1`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-300,-250,600,500"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should generate chord chart for 500 x 500 1`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-250,-250,500,500"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should generate chord chart for 500 x 600 1`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-250,-300,500,600"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should generate chord chart for 600 x 500 1`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-300,-250,600,500"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should hide pair count on mouse out from chord 1`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-300,-250,600,500"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should hide pair count on mouse out from chord 2`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-300,-250,600,500"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should highlight chords when hover on author name 1`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-300,-250,600,500"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            stroke="black"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            stroke="black"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should not add duplicate chord chart svg on re-rendering 1`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-350,-300,700,600"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M9.797174393178826e-15,-160A160,160,0,0,1,96.5825184376705,-127.5610329694654L90.5461110353161,-119.58846840887381A150,150,0,0,0,9.184850993605149e-15,-150Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-71.43445305819547)
        translate(165)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M104.86574105298877,-120.84360286505657A160,160,0,0,1,145.83012603540163,-65.82988941581834L136.71574315818904,-61.7155213273297A150,150,0,0,0,98.31163223717697,-113.29087768599054Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-36.672156187649115)
        translate(165)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M149.89158825365928,-55.968846430808924A160,160,0,0,1,158.4044245744654,-22.539704417593835L148.5041480385613,-21.13097289149422A150,150,0,0,0,140.52336398780557,-52.47079352888337Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.28689061163908)
        translate(165)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M159.55407923344953,-11.937160464956163A160,160,0,0,1,134.41127613881756,86.79636424836315L126.01057138014146,81.37159148284044A150,150,0,0,0,149.58194928135893,-11.191087935896402Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.286890611639109)
        translate(165)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M128.33055602883007,95.55767048924595A160,160,0,0,1,10.65876718774285,159.64457611217958L9.992594238508921,149.66679010516836A150,150,0,0,0,120.3098962770282,89.58531608366808Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(61.42621877672184)
        translate(165)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M-6.12570991828312e-14,160A160,160,0,0,1,-66.99586062098214,145.2981577985555L-62.808619332170764,136.21702293614578A150,150,0,0,0,-5.742853048390424e-14,150Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(102.37703129453641)
        translate(165)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-76.52640629306308,140.51230956705905A160,160,0,0,1,-128.3305560288302,95.5576704892458L-120.3098962770283,89.58531608366793A150,150,0,0,0,-71.74350589974664,131.73029021911788Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.9508125178146)
        translate(165)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-134.41127613881764,86.79636424836305A160,160,0,0,1,-153.2871123338082,-45.85914513335878L-143.7066678129452,-42.99294856252385A150,150,0,0,0,-126.01057138014153,81.37159148284036Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.90162503562914)
        translate(165)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-149.89158825365928,-55.96884643080894A160,160,0,0,1,-85.71696055457386,-135.10219344365078L-80.35965051991299,-126.65830635342259A150,150,0,0,0,-140.52336398780557,-52.47079352888338Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(219.04095320071178)
        translate(165)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-76.52640629306306,-140.51230956705905A160,160,0,0,1,-10.658767187743013,-159.64457611217955L-9.992594238509074,-149.66679010516833A150,150,0,0,0,-71.74350589974661,-131.73029021911788Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(253.8032500712581)
        translate(165)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.4966657469141118,-148.99917222298868A149,149,0,0,1,61.93851973015494,-135.51612366665898Q0,0,-0.4633324753091826,138.9992277784928L-31.937223517113907,145.536984144986L-57.7815720972587,126.4210818098362Q0,0,0.4966657469141118,-148.99917222298868Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M98.0307968107648,-112.2094598358202A149,149,0,0,1,135.5992038328311,-61.75642411848603Q0,0,-66.88884559751293,121.84778346212161L-97.6562213555959,112.53560516808383L-111.20983260243402,83.38688825312168Q0,0,98.0307968107648,-112.2094598358202Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M148.6209656831468,-10.62113738772365A149,149,0,0,1,139.75950238687977,51.65541106768729Q0,0,-66.07504664497411,-122.29099807780004L-41.56155838623263,-143.08611695237164L-9.722055779917119,-138.65958903520587Q0,0,148.6209656831468,-10.62113738772365Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M119.210539983904,89.38594496197949A149,149,0,0,1,71.70099276280148,130.61381104932468Q0,0,-116.51780008576482,-75.7931544611632L-104.93610549281019,-105.78002535451488L-74.85742848945765,-117.1211569271143Q0,0,119.210539983904,89.38594496197949Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-125.43923539498887,80.41143092571212A149,149,0,0,1,-147.44333399327755,21.48169595136307Q0,0,66.07504664497392,122.29099807780015L41.561558386232484,143.0861169523717L9.72205577991704,138.65958903520587Q0,0,-125.43923539498887,80.41143092571212Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M62.840577456008226,-135.10019180221556A149,149,0,0,1,89.54600064192209,-119.09035968136502Q0,0,-138.57726830157216,-10.8323917060861L-146.52051473593278,-27.069147779664373L-133.30023921265388,-39.396017893300524Q0,0,62.840577456008226,-135.10019180221556Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M139.41202977542378,52.58598628813908A149,149,0,0,1,125.4392353949888,80.41143092571224Q0,0,-130.0555177099591,-49.056725463431754L-133.15446672159263,-66.86469914751942L-117.02049476445265,-75.01469059512749Q0,0,139.41202977542378,52.58598628813908Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-147.5832677323999,20.498270303290873A149,149,0,0,1,-148.6209656831468,-10.621137387723719Q0,0,130.3796700119214,-48.18860495576193L144.39176076626438,-36.769816736256324L137.54780822191663,-20.039971390868935Q0,0,-147.5832677323999,20.498270303290873Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should remove highlight effects on mouse out from author name 1`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-300,-250,600,500"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            stroke="black"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            stroke="black"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Chord Chart should remove highlight effects on mouse out from author name 2`] = `
<body>
  <div>
    <div
      id="chord-chart"
    >
      <svg
        svg-for="pairing-matrix-chord-chart"
        viewBox="-300,-250,600,500"
      >
        <g
          font-family="sans-serif"
          font-size="20"
        >
          <g>
            <path
              d="M6.735557395310443e-15,-110A110,110,0,0,1,62.979198162470624,-90.1865876880385L57.25381651133693,-81.98780698912591A100,100,0,0,0,6.123233995736766e-15,-100Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-72.5362949719086)
        translate(115)
        
      "
            >
              barry.allen
            </text>
          </g>
          <g>
            <path
              d="M71.6681996821441,-83.44860187157313A110,110,0,0,1,98.81842025425917,-48.321008044665426L89.83492750387198,-43.928189131514024A100,100,0,0,0,65.15290880194918,-75.86236533779376Z"
              fill="rgb(200, 61, 172)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-37.700541973781355)
        translate(115)
        
      "
            >
              bruce_banner
            </text>
          </g>
          <g>
            <path
              d="M103.14879108810013,-38.214223753250266A110,110,0,0,1,108.73838294777542,-16.612166442187636L98.85307540706856,-15.101969492897851A100,100,0,0,0,93.7716282619092,-34.740203412045695Z"
              fill="rgb(255, 83, 117)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(-14.507258994381715)
        translate(115)
        
      "
            >
              diana
            </text>
          </g>
          <g>
            <path
              d="M109.85359329246296,-5.6734505139409155A110,110,0,0,1,93.31481898635714,58.243837077783624L84.83165362396103,52.94894279798511A100,100,0,0,0,99.86690299314814,-5.157682285400832Z"
              fill="rgb(255, 140, 56)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(14.50725899438173)
        translate(115)
        
      "
            >
              john.reese
            </text>
          </g>
          <g>
            <path
              d="M87.03395231949399,67.26879769735777A110,110,0,0,1,10.981675831151113,109.45045818058283L9.98334166468283,99.50041652780257A100,100,0,0,0,79.12177483590362,61.15345245214343Z"
              fill="rgb(201, 211, 58)"
            />
            <text
              dy="0.35em"
              transform="
        rotate(60.98548201123657)
        translate(115)
        
      "
            >
              natasha
            </text>
          </g>
          <g>
            <path
              d="M6.735557395310443e-15,110A110,110,0,0,1,-43.483448690799065,101.04053488553316L-39.53040790072642,91.85503171412105A100,100,0,0,0,6.123233995736766e-15,100Z"
              fill="rgb(121, 246, 89)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(101.64247001872758)
        translate(115)
        rotate(180)
      "
            >
              oliver
            </text>
          </g>
          <g>
            <path
              d="M-53.3534343854442,96.19465182263565A110,110,0,0,1,-87.033952319494,67.26879769735774L-79.12177483590365,61.1534524521434A100,100,0,0,0,-48.50312216858564,87.44968347512332Z"
              fill="rgb(40, 234, 141)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(130.65698800749107)
        translate(115)
        rotate(180)
      "
            >
              rohdy
            </text>
          </g>
          <g>
            <path
              d="M-93.31481898635712,58.24383707778363A110,110,0,0,1,-106.4485332978459,-27.725615570035508L-96.77139390713263,-25.205105063668643A100,100,0,0,0,-84.83165362396102,52.94894279798512Z"
              fill="rgb(30, 184, 208)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(171.31397601498207)
        translate(115)
        rotate(180)
      "
            >
              steve
            </text>
          </g>
          <g>
            <path
              d="M-103.14879108810015,-38.21422375325019A110,110,0,0,1,-62.690330200010685,-90.38762359645057L-56.99120927273699,-82.17056690586415A100,100,0,0,0,-93.77162826190923,-34.740203412045624Z"
              fill="rgb(71, 117, 222)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(217.7921990318369)
        translate(115)
        rotate(180)
      "
            >
              tonystark
            </text>
          </g>
          <g>
            <path
              d="M-53.35343438544435,-96.19465182263556A110,110,0,0,1,-10.981675831151273,-109.45045818058281L-9.983341664682975,-99.50041652780256A100,100,0,0,0,-48.503122168585776,-87.44968347512324Z"
              fill="rgb(110, 64, 170)"
            />
            <text
              dy="0.35em"
              text-anchor="end"
              transform="
        rotate(252.6279520299641)
        translate(115)
        rotate(180)
      "
            >
              zoe.morgan
            </text>
          </g>
        </g>
        <g
          fill-opacity="0.75"
        >
          <path
            author="0"
            co-author="5"
            d="M0.49499793750257365,-98.99876250257812A99,99,0,0,1,38.67993412146331,-91.13101939712547Q0,0,-0.4449981458356361,88.9988875023177L-19.978592814547707,96.96316738406652L-34.77287006879024,81.92586592266835Q0,0,0.49499793750257365,-98.99876250257812Z"
            fill="rgb(121, 246, 89)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → oliver 2
            </title>
          </path>
          <path
            author="1"
            co-author="6"
            d="M64.87609059212573,-74.78029733480801A99,99,0,0,1,88.71802289373822,-43.93304466829201Q0,0,-43.556388603934685,77.61340742283532L-64.50137971392971,75.10374168441581L-70.14536764651649,54.77798278263848Q0,0,64.87609059212573,-74.78029733480801Z"
            fill="rgb(40, 234, 141)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              bruce_banner → rohdy 2
            </title>
          </path>
          <path
            author="3"
            co-author="9"
            d="M98.89252853380249,-4.611702526297729A99,99,0,0,1,93.00471484818173,33.92820384294465Q0,0,-42.778089663927936,-78.04508341148045L-29.558947355718413,-94.4842242452245L-9.327838025770674,-88.50983808461626Q0,0,98.89252853380249,-4.611702526297729Z"
            fill="rgb(110, 64, 170)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → zoe.morgan 2
            </title>
          </path>
          <path
            author="7"
            co-author="4"
            d="M-84.24438347297432,51.998883192415306A99,99,0,0,1,-97.78856691122614,15.440083595908629Q0,0,42.77808966392782,78.04508341148052L29.558947355718278,94.48422424522454L9.327838025770546,88.50983808461626Q0,0,-84.24438347297432,51.998883192415306Z"
            fill="rgb(201, 211, 58)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → natasha 2
            </title>
          </path>
          <path
            author="0"
            co-author="7"
            d="M39.58929514641777,-90.73966998953557A99,99,0,0,1,56.27473187812054,-81.45031953310954Q0,0,-88.85748105638254,-5.034685721533813L-97.84050214562538,-15.107486220145114L-86.23762624802295,-22.00163219186939Q0,0,39.58929514641777,-90.73966998953557Z"
            fill="rgb(30, 184, 208)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              barry.allen → steve 1
            </title>
          </path>
          <path
            author="7"
            co-author="2"
            d="M-97.93807578625037,14.461442227062932A99,99,0,0,1,-98.89252853380249,-4.611702526297706Q0,0,83.61029920695127,-30.50111254567749L95.8434752014889,-24.799763331563913L87.91093388989017,-13.880479192281472Q0,0,-97.93807578625037,14.461442227062932Z"
            fill="rgb(255, 83, 117)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              steve → diana 1
            </title>
          </path>
          <path
            author="4"
            co-author="8"
            d="M78.02686962927113,60.93281230877767A99,99,0,0,1,48.45036485156781,86.33401499843478Q0,0,-75.26360616145435,-47.50146932015359L-71.67700461685571,-68.28914268868255L-51.08719972600738,-72.87728057601375Q0,0,78.02686962927113,60.93281230877767Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              natasha → tonystark 2
            </title>
          </path>
          <path
            author="3"
            co-author="8"
            d="M92.66078826743409,34.856539094662715A99,99,0,0,1,84.24438347297433,51.998883192415285Q0,0,-83.30111268486502,-31.335676559848206L-88.86689449630438,-43.631124929145535L-75.73484978883555,-46.746470748736904Q0,0,92.66078826743409,34.856539094662715Z"
            fill="rgb(71, 117, 222)"
            style="stroke-width: 3px; mix-blend-mode: multiply;"
          >
            <title>
              john.reese → tonystark 1
            </title>
          </path>
        </g>
      </svg>
    </div>
  </div>
</body>
`;
